Fix text overflow on project page

--- a/funnel/static/sass/_project.scss
+++ b/funnel/static/sass/_project.scss
@@ -37,7 +37,16 @@
 
 .project-section {
   padding-top: 45px;
+}
+
+.details-section,
+.project-section {
   overflow-wrap: break-word;
+}
+
+.project-section pre,
+.details-section pre {
+  white-space: pre-wrap;
 }
 
 .project-banner {
